--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -11,3 +11,10 @@
     border-bottom: 4px solid;
     padding: 8px;
 }
+
+.time .colaboradores{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 32px;
+    flex-wrap: wrap;
+}
